# featurevisor-python

./: .editorconfig  .gitignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/: checks.yml
.github/workflows/: checks.yml  publish.yml
src/featurevisor/: __init__.py  bucketer.py  child.py  cli.py  compare_versions.py  conditions.py  datafile_reader.py  diagnostics.py  emitter.py  evaluate.py  evaluation_data_provider.py  events.py  helpers.py  hooks.py  instance.py  logger.py  modules.py  murmurhash.py  openfeature.py  project.py  tester.py  types.py
tests/: test_cli.py  test_conditions_parity.py  test_conformance.py  test_datafile_reader_parity.py  test_evaluation_data_provider.py  test_example1_integration.py  test_helpers_parity.py  test_instance_parity.py  test_sdk.py
tests_openfeature/: test_provider.py
